--- a/src/widgets/FlightCard/ui/FlightCard.module.scss
+++ b/src/widgets/FlightCard/ui/FlightCard.module.scss
@@ -2,22 +2,21 @@
   box-sizing: border-box;
   border: 3px solid transparent;
   border-radius: $radius-lg;
-  background: linear-gradient($color-dark, $color-dark) padding-box;
-  color: $color-white;
-  font-family: $font-main;
+  background: linear-gradient(var(--color-default), var(--color-default)) padding-box;
+  color: var(--color-white);
   padding: $space-6 $space-6;
   display: flex;
   flex-direction: column;
-  box-shadow: $shadow-main;
   min-width: $width-xs;
   font-size: $font-size-base;
-  transition: background 0.3s, box-shadow 0.2s;
-  
+  box-shadow: $shadow-main;
+  transition: background 1s, box-shadow 1s;
 
-  &:hover {
+  &:hover,
+  &.active {
     background:
-    linear-gradient($color-dark, $color-dark) padding-box,
-    linear-gradient(90deg, $color-accent, #ff6a00, $color-accent) border-box;
+      linear-gradient(var(--color-default), var(--color-default)) padding-box,
+      linear-gradient(90deg, var(--color-accent), #ff6a00, var(--color-accent)) border-box;
   }
 }
 
@@ -37,7 +36,7 @@
   width: 2.25rem;
   height: 2.25rem;
   border-radius: 50%;
-  background: $color-white;
+  background: var(--color-default);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -54,7 +53,7 @@
   font-weight: $font-weight-semibold;
   font-size: $font-size-lg;
   margin-right: $space-4;
-  color: $color-white;
+  color: var(--color-default);
 }
 
 .codes {
@@ -64,11 +63,11 @@
 }
 
 .code {
-  background: $color-gray;
+  background: var(--color-secondary);
   border-radius: $radius-lg;
   padding: $space-1 $space-2;
   font-size: $font-size-xs;
-  color: $color-white;
+  color: var(--color-text);
   font-weight: $font-weight-light;
 }
 
@@ -94,7 +93,7 @@
 .city {
   font-size: $font-size-xs;
   font-weight: $font-weight-light;
-  color: $color-white;
+  color: var(--color-text);
   opacity: 0.8;
 }
 
@@ -102,13 +101,13 @@
   font-size: $font-size-xl;
   font-weight: $font-weight-semibold;
   letter-spacing: $letter-spacing-wide;
-  color: $color-white;
+  color: var(--color-text);
 }
 
 .routeLine {
   flex: 1;
   height: 0.125rem;
-  background: $color-gray;
+  background: var(--color-secondary);
   margin: 0 $space-4;
   position: relative;
   display: flex;
@@ -123,7 +122,7 @@
   top: 0;
   height: 100%;
   width: 40%;
-  background: linear-gradient(90deg, $color-accent 0%, #ff6a00 100%);
+  background: linear-gradient(90deg, var(--color-accent) 0%, #ff6a00 100%);
   border-radius: 0.125rem;
   z-index: 1;
 }
@@ -135,6 +134,6 @@
   transform: translate(-50%, -50%);
   z-index: 2;
   font-size: 1.25rem;
-  color: $color-white;
+  color: var(--color-default);
   pointer-events: none;
 }
