--- a/src/widgets/FlightDetails/ui/FlightDetails.module.scss
+++ b/src/widgets/FlightDetails/ui/FlightDetails.module.scss
@@ -1,6 +1,6 @@
 .flightDetails {
   min-width: $width-sm;
-  max-height: $height-4xl;
+  height: $height-xl;
   display: flex;
   flex-direction: column;
   gap: $space-2;
