--- a/src/widgets/Header/ui/Header.module.scss
+++ b/src/widgets/Header/ui/Header.module.scss
@@ -1,6 +1,6 @@
 .header {
   width: auto;
-  min-height: 3rem;
+  height: auto;
   background-color: var(--color-default);
   color: var(--color-text);
   margin: $space-6;
