--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,6 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
 }
@@ -62,4 +61,18 @@ button:hover {
   button {
     background-color: #f9f9f9;
   }
+}
+
+/* Reset styles for input elements */
+input {
+  /* border: none;
+  outline: none; */
+  background: none;
+  box-shadow: none;
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+  padding: 0;
+  margin: 0;
+  appearance: none;
 }
