--- a/src/pages/homePage/ui/HomePage.module.scss
+++ b/src/pages/homePage/ui/HomePage.module.scss
@@ -18,11 +18,10 @@
   display: flex;
   flex-direction: column;
   gap: $space-2;;
-  min-width: $width-xs;
+  width: $width-sm;
 }
 
 .btnWrap {
-  width: $width-sm;
   display: flex;
   flex-direction: row;
   gap: $space-3;
@@ -37,4 +36,16 @@
 .buttonFilterActive {
   background-color: var(--color-accent);
   color: var(--color-default);
+}
+
+.filtersWrap {
+  display: flex;
+  flex-direction: row;
+  gap: $space-3;
+}
+
+.filter {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
 }
