--- a/src/widgets/FlightCard/ui/FlightCard.module.scss
+++ b/src/widgets/FlightCard/ui/FlightCard.module.scss
@@ -4,7 +4,7 @@
   border-radius: $radius-lg;
   background: linear-gradient(var(--color-default), var(--color-default)) padding-box;
   color: var(--color-white);
-  padding: $space-6 $space-6;
+  padding: $space-6;
   display: flex;
   flex-direction: column;
   min-width: $width-xs;
