--- a/src/features/FlightList/ui/FlightList.module.scss
+++ b/src/features/FlightList/ui/FlightList.module.scss
@@ -5,4 +5,15 @@
   display: flex;
   flex-direction: column;
   gap: $space-2;
+
+    /* Для Chrome, Edge, Safari */
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Для Firefox */
+  scrollbar-width: none;
+
+  /* Для IE и Edge (устаревшие) */
+  -ms-overflow-style: none;
 }
