light number fix

--- a/src/widgets/FlightCard/ui/FlightCard.module.scss
+++ b/src/widgets/FlightCard/ui/FlightCard.module.scss
@@ -53,7 +53,7 @@
   font-weight: $font-weight-semibold;
   font-size: $font-size-lg;
   margin-right: $space-4;
-  color: var(--color-default);
+  color: var(--color-accent);
 }
 
 .codes {
