--- a/src/widgets/FlightCard/ui/FlightCard.module.scss
+++ b/src/widgets/FlightCard/ui/FlightCard.module.scss
@@ -123,3 +123,10 @@
     display: none;
   }
 }
+
+// Мобильные устройства
+@media (max-width: 759px) {
+  .codeSecond {
+    display: none;
+  }
+}
