--- a/src/pages/homePage/ui/HomePage.module.scss
+++ b/src/pages/homePage/ui/HomePage.module.scss
@@ -8,6 +8,7 @@
 
 .homeWrapper {
   // padding-top: 72px;
+  position: relative;
   height: 100vh;
   width: 100dvw;
   display: flex;
@@ -24,6 +25,7 @@
   flex-direction: column;
   gap: $space-2;;
   width: $width-sm;
+  margin-top: $space-24;
 }
 
 .flightParams {
@@ -101,12 +103,18 @@ input {
 
 // Мобильные устройства
 @media (max-width: 759px) {
+  .homeWrapper {
+    min-height: 100vh;
+    width: 100dvw;
+  }
+
   .homePageContainer {
     position: relative;
+    overflow: visible;
     flex-direction: row;
     margin: 0px 24px;
     gap: 1rem;
-    min-height: 100%;
+    min-height: 100vh;
   }
   .flight { 
     width: 100%; 
