--- a/src/widgets/Header/ui/Header.module.scss
+++ b/src/widgets/Header/ui/Header.module.scss
@@ -33,3 +33,9 @@
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* IE 10+ */
 }
+
+.btnWrap {
+  display: flex;
+  flex-direction: row;
+  gap: $space-3;
+}
