--- a/src/entities/Flight/ui/Flight.module.scss
+++ b/src/entities/Flight/ui/Flight.module.scss
@@ -45,7 +45,12 @@
   top: 0;
   height: 100%;
   border-radius: 3px 0 0 3px;
-  background: linear-gradient(90deg, #ff4e50 0%, var(--color-accent) 50%, #ff6a00 100%);
+  background: linear-gradient(
+    90deg,
+    #ff4e50 0%,
+    var(--color-accent) 50%,
+    #ff6a00 100%
+  );
   z-index: 1;
 }
 
@@ -95,7 +100,7 @@
   font-size: 1rem;
   font-weight: 400;
   color: var(--color-text);
-} 
+}
 
 .routeLine {
   flex: 1;
@@ -113,7 +118,12 @@
   left: 0;
   top: 0;
   height: 100%;
-  background: linear-gradient(90deg, #ff4e50 0%, var(--color-accent) 50%, #ff6a00 100%);
+  background: linear-gradient(
+    90deg,
+    #ff4e50 0%,
+    var(--color-accent) 50%,
+    #ff6a00 100%
+  );
   border-radius: 0.125rem;
   z-index: 1;
 }
