--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
-@import './shared/styles/theme.css';
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
-
+@import "./shared/styles/theme.css";
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap");
 
 :root {
-  font-family: 'JetBrains Mono', 'JetBrains', Arial, sans-serif;
+  font-family: "JetBrains Mono", "JetBrains", Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
