--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import "./shared/styles/theme.css";
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap");
+@import "maplibre-gl/dist/maplibre-gl.css";
 
 :root {
   font-family: "JetBrains Mono", "JetBrains", Arial, sans-serif;
