--- a/src/widgets/Header/ui/Header.module.scss
+++ b/src/widgets/Header/ui/Header.module.scss
@@ -26,9 +26,14 @@
   background-color: var(--color-secondary);
 }
 
-.header p {
+.header a {
   cursor: pointer;
+  text-decoration: none;
+  color: var(--color-text);
   user-select: none;
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
   -webkit-user-select: none; /* Safari */
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* IE 10+ */
